add a 'gambiarra' on the html code for now

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <h1>Manifestações Orais do HIV</h1>
                 <p>Aspectos Imunológicos e Implicações Odontológicas.</p>
                 <div class="cta-buttons">
-                    <a href="manifestacoes.html" class="btn btn-primary">Ver Manifestações Orais</a>
+                    <a href="manifestacoes.html" class="btn btn-primary">Ver Manifestações Orais</a><br><br><br>
                     <a href="implicacoes.html" class="btn btn-secondary">Guia para o Dentista</a>
                 </div>
             </div>
