Add information about the work

--- a/equipe.html
+++ b/equipe.html
@@ -38,7 +38,7 @@
     <main>
         <section id="equipe" class="container section-dark">
             <h2 class="white-text">Nossa Equipe</h2>
-            <p class="subtitle white-text team-intro">Este trabalho foi desenvolvido pelos seguintes alunos, como parte de [Nome da Disciplina ou Evento] na [Nome da Instituição].</p>
+            <p class="subtitle white-text team-intro">Este trabalho foi desenvolvido pelos seguintes alunos, como parte da A3 da unidade curricular de integração clinico patologica na Instituição AGES.</p>
             
             <p class="subtitle white-text team-intro" style="margin-top: -1rem; margin-bottom: 3rem;">Nosso compromisso é com a ciência e a desmistificação. Acreditamos que a informação de qualidade é a melhor ferramenta contra o estigma e a desinformação no campo da saúde.</p>
 
