--- a/implicacoes.html
+++ b/implicacoes.html
@@ -60,7 +60,7 @@
                 </div>
                 <div class="protocolo-item">
                     <h4 class="card-title-dark">3. Atenção aos Efeitos da TARV</h4>
-                    <p>A Terapia Antirretroviral (TARV) diminuiu as lesões oportunistas, mas pode causar <strong>xerostomia (boca seca)</strong>. A boca seca aumenta drasticamente o risco de cáries e periodontite. O dentista monitora e maneja esses efeitos colaterais, orientando sobre substitutos salivares e higiene rigorosa.</p>
+                    <p>A Terapia Antirretroviral (TARV) diminui as lesões oportunistas, mas pode causar <strong>xerostomia (boca seca)</strong>. A boca seca aumenta drasticamente o risco de cáries e periodontite. O dentista monitora e maneja esses efeitos colaterais, orientando sobre substitutos salivares e higiene rigorosa.</p>
                 </div>
                 <div class="protocolo-item">
                     <h4 class="card-title-dark">4. O Fator Imunológico (CD4)</h4>
