Add a new page "mitos/verdades"

--- a/implicacoes.html
+++ b/implicacoes.html
@@ -34,6 +34,7 @@
                 <li><a href="index.html">Início</a></li>
                 <li><a href="imunologia.html">Imunologia</a></li>
                 <li><a href="manifestacoes.html">Manifestações</a></li>
+                <li><a href="mitos e verdades.html">Mitos/Verdades</a></li>
                 <li><a href="implicacoes.html">Implicações</a></li>
                 <li><a href="ajuda.html">Apoio</a></li>
                 <li><a href="equipe.html">Equipe</a></li>
