add some details

--- a/mitos e verdades.html
+++ b/mitos e verdades.html
@@ -67,6 +67,19 @@
                 <p><strong>DEPENDE.</strong> O HIV por si só não causa mais cáries. No entanto, muitos medicamentos antirretrovirais (TARV) podem causar <strong>xerostomia (boca seca)</strong>. A falta de saliva reduz a proteção natural contra cáries, aumentando o risco. Por isso, o cuidado preventivo do dentista é crucial.</p>
             </div>
 
+            <div style="margin-top: 40px; padding-top: 20px; border-top: 1px solid #ccc;">
+                <h3>Fontes de Informação Confiáveis</h3>
+                <p>Para obter informações precisas e atualizadas sobre HIV, AIDS e saúde, consulte sempre os canais oficiais:</p>
+                <ul>
+                    <li><a href="https://www.gov.br/saude/pt-br/assuntos/saude-de-a-a-z/h/hiv-aids" target="_blank"><strong>Ministério da Saúde do Brasil - Departamento de HIV/AIDS</strong></a>: Informações oficiais sobre prevenção, tratamento e políticas públicas.</li>
+                    <li><a href="https://unaids.org.br/" target="_blank"><strong>UNAIDS Brasil</strong></a>: Programa Conjunto das Nações Unidas sobre HIV/AIDS.</li>
+                    <li><a href="https://www.gov.br/saude/pt-br/canais-de-atendimento/disque-saude-136" target="_blank"><strong>Disque Saúde (136)</strong></a>: Canal gratuito e sigiloso para tirar dúvidas e buscar apoio.</li>
+                    <li><strong>Consulte um Cirurgião-Dentista</strong>: O profissional pode diagnosticar manifestações orais e orientar sobre cuidados bucais específicos.</li>
+                </ul>
+            </div>
+            </main>
+    </div>
+
         </main>
     </div>
     </main>
