add more information

--- a/mitos e verdades.html
+++ b/mitos e verdades.html
@@ -43,6 +43,16 @@
             <p>A desinformação ainda é uma das maiores barreiras no combate ao HIV e no tratamento de pessoas vivendo com o vírus. Esclarecer os fatos é crucial para a saúde pública e para o combate ao estigma.</p>
 
             <div class="myth-truth-card myth-myth">
+                <h3>MITO: Qualquer lesão oral em um paciente soropositivo significa que ele tem AIDS.</h3>
+                <p><strong>FALSO.</strong> A presença de lesões orais, como Candidíase, indica a infecção pelo HIV e a queda da imunidade, mas não define obrigatoriamente o diagnóstico de AIDS (que é definido pela contagem de CD4 abaixo de 200 células/mm³ ou a presença de doenças definidoras específicas). Com tratamento eficaz, muitas lesões desaparecem.</p>
+            </div>
+
+            <div class="myth-truth-card myth-truth">
+                <h3>VERDADE: A saúde bucal precária e o tabagismo aceleram o aparecimento de lesões.</h3>
+                <p><strong>CORRETO.</strong> Fatores como a falta de higiene bucal e o uso de tabaco são cofatores que podem agravar ou precipitar o aparecimento de manifestações orais relacionadas ao HIV, como as doenças periodontais (GUN/PUN) e a Leucoplasia Pilosa Oral. O dentista reforça a importância de hábitos saudáveis.</p>
+            </div>
+
+            <div class="myth-truth-card myth-myth">
                 <h3>MITO: Pessoas com HIV não podem fazer tratamento odontológico de rotina.</h3>
                 <p><strong>FALSO.</strong> Pessoas vivendo com HIV podem e devem receber todo tipo de tratamento odontológico. As precauções padrão de biossegurança (luvas, máscaras, esterilização) são universais e protegem tanto o paciente quanto a equipe, independentemente do status sorológico.</p>
             </div>
