--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
             <h3>O que você encontrará neste trabalho?</h3>
             <p>Este site é um guia acadêmico sobre o tema, oferecendo informações confiáveis e baseadas em ciência. Use o menu de navegação para explorar:</p>
             <ul>
-                <li>**Imunologia:** Como o vírus age no corpo.</li>
-                <li>**Manifestações:** Fotos e descrições das lesões mais comuns.</li>
-                <li>**Implicações:** Orientações sobre o tratamento odontológico seguro.</li>
+                <li><strong>Imunologia:</strong> Como o vírus age no corpo.</li>
+                <li><strong>Manifestações:</strong> Fotos e descrições das lesões mais comuns.</li>
+                <li><strong>Implicações:</strong> Orientações sobre o tratamento odontológico seguro.</li>
             </ul>
         </section>
     </main>
