--- a/referencias.html
+++ b/referencias.html
@@ -77,12 +77,44 @@
             
             <h3 style="margin-top: 2rem;">Referências bibliográficas</h3>
             <p>Abaixo estão algumas das principais referências utilizadas na elaboração deste material:</p>
-            <ul class="references-list">
-                <li>NEVILLE, B. W. et al. <em>Patologia Oral e Maxilofacial</em>. 4. ed. Rio de Janeiro: Elsevier, 2016.</li>
-                <li>[Adicionar artigo 1 &mdash; Autor(es), Título, Periódico, Ano.]</li>
-                <li>[Adicionar artigo 2 &mdash; Autor(es), Título, Periódico, Ano.]</li>
-                <li>[Adicionar protocolo ou diretriz do Ministério da Saúde específico para HIV/AIDS.]</li>
-            </ul>
+            <ul>
+  <li>
+    LOMELÍ-MARTÍNEZ, S. M. et al. <strong>Manifestações Orais Associadas a Pacientes com HIV/AIDS.</strong> 
+    Frontiers in Medicine, v. 9, 2022. 
+    Disponível em: <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9504409/" target="_blank">https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9504409/</a>. 
+    Acesso em: 18 nov. 2025.
+  </li>
+
+  <li>
+    FILHO, Orlando de Jesus Londono Dominguez; VIANA, Edinelza Costa; PESSOA, Willian Guimarães; DOMINGOS, Pedro Rauel Cândido. 
+    <strong>Manifestações orais em pacientes imunodeprimidos pelo Vírus da Imunodeficiência Humana (HIV): revisão da literatura.</strong> 
+    Revista Eletrônica Acervo Saúde, v. 13, n. 2, e6034, 2021. 
+    Disponível em: <a href="file:///mnt/data/Manifestações%20orais%20em%20pacientes%20imunodeprimidos%20pelo%20Vírus%20da%20Imunodeficiência%20Humana%20(HIV)_%20revisão%20da%20literatura%20_%20Revista%20Eletrônica%20Acervo%20Saúde.pdf">Arquivo local</a>. 
+    Acesso em: 25 nov. 2025.
+  </li>
+
+  <li>
+    NEVILLE, B. W. et al. <strong>Patologia oral e maxilofacial.</strong> 4. ed. Rio de Janeiro: Elsevier, 2016.
+  </li>
+
+  <li>
+    SOUZA, Lélia Batista de; PEREIRA PINTO, Leão; MEDEIROS, Ana Myrian Costa de; ARAÚJO Jr., Raimundo Fernandes de; MESQUITA, Olibânia Jácome Xavier de. 
+    <strong>Manifestações orais em pacientes com AIDS em uma população brasileira.</strong> 
+    Pesquisa Odontológica Brasileira, v. 14, n. 1, p. 79–85, jan./mar. 2000. 
+    Disponível em: <a href="file:///mnt/data/SciELO%20Brasil%20-%20Manifestações%20orais%20em%20pacientes%20com%20AIDS%20em%20uma%20população%20brasileira%20Manifestações%20orais%20em%20pacientes%20com%20AIDS%20em%20uma%20população%20brasileira.pdf">Arquivo local</a>. 
+    Acesso em: 25 nov. 2025.
+  </li>
+
+  <li>
+    NEVILLE, B. W.; DAMM, D. D.; ALLEN, C. M.; CHI, A. C. 
+    <strong>Patologia Oral e Maxilofacial.</strong> 5. ed. St. Louis: Elsevier Saunders, 2023. 
+    Disponível em: 
+    <a href="https://app.minhabiblioteca.com.br/reader/books/9786561110129?library_return_url=https%3A%2F%2Fapp.minhabiblioteca.com.br%2Fhome%2Fdashboard" target="_blank">
+      https://app.minhabiblioteca.com.br/reader/books/9786561110129
+    </a>. 
+    Acesso em: 18 nov. 2025.
+  </li>
+</ul>
         </section>
     </main>
     
