--- a/equipe.html
+++ b/equipe.html
@@ -50,46 +50,64 @@
             </p>
 
             <div class="team-grid">
-                <div class="team-member">
-                    <div class="avatar">Foto</div>
-                    <h4>Samira</h4>
-                </div>
 
-                <div class="team-member">
-                    <div class="avatar">Foto</div>
-                    <h4>Sara</h4>
-                </div>
+    <div class="team-member">
+        <div class="avatar">
+            <img src="WhatsApp Image 2025-11-25 at 22.02.46.jpeg" alt="Samira">
+        </div>
+        <h4>Samira</h4>
+    </div>
 
-                <div class="team-member">
-                    <div class="avatar">Foto</div>
-                    <h4>Ramila</h4>
-                </div>
+    <div class="team-member">
+        <div class="avatar">
+            <img src="WhatsApp Image 2025-11-25 at 22.19.06.jpeg" alt="Sara">
+        </div>
+        <h4>Sara</h4>
+    </div>
 
-                <div class="team-member">
-                    <div class="avatar">Foto</div>
-                    <h4>Luna</h4>
-                </div>
+    <div class="team-member">
+        <div class="avatar">
+            <img src="ramila.jpeg" alt="Ramila">
+        </div>
+        <h4>Ramila</h4>
+    </div>
 
-                <div class="team-member">
-                    <div class="avatar">Foto</div>
-                    <h4>Clara</h4>
-                </div>
+    <div class="team-member">
+        <div class="avatar">
+            <img src="WhatsApp Image 2025-11-25 at 21.57.41.jpeg" alt="Luna">
+        </div>
+        <h4>Luna</h4>
+    </div>
 
-                <div class="team-member">
-                    <div class="avatar">Foto</div>
-                    <h4>Katielly</h4>
-                </div>
+    <div class="team-member">
+        <div class="avatar">
+            <img src="WhatsApp Image 2025-11-25 at 21.54.41.jpeg" alt="Clara">
+        </div>
+        <h4>Clara</h4>
+    </div>
 
-                <div class="team-member">
-                    <div class="avatar">Foto</div>
-                    <h4>Elimarcos</h4>
-                </div>
+    <div class="team-member">
+        <div class="avatar">
+            <img src="WhatsApp Image 2025-11-25 at 22.08.12.jpeg" alt="Katielly">
+        </div>
+        <h4>Katielly</h4>
+    </div>
 
-                <div class="team-member">
-                    <div class="avatar">Foto</div>
-                    <h4>Davi</h4>
-                </div>
-            </div>
+    <div class="team-member">
+        <div class="avatar">
+            <img src="SGCAM_20241212_182712921.MP.jpg" alt="Elimarcos">
+        </div>
+        <h4>Elimarcos</h4>
+    </div>
+
+    <div class="team-member">
+        <div class="avatar">
+            <img src="WhatsApp Image 2025-11-25 at 21.56.26~2.jpg" alt="Davi">
+        </div>
+        <h4>Davi</h4>
+    </div>
+
+</div>
         </section>
     </main>
     
